--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.98"
-arrow = "55.2.0"
+arrow = { version = "55.2.0", features = ["prettyprint"]}
+parquet = "55.2.0"
